# s4-personal-koen2312

./: README.md
Dockersetup/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
Dockersetup/include/: logger.h
Dockersetup/src/: main.cpp
